# bynk

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  deny.toml  llms-full.txt
bynk/: Cargo.toml  README.md
bynk-driver/: Cargo.toml
bynk-driver/src/: lib.rs
bynk-driver/tests/: project_diagnostics.rs
bynk-emit/: Cargo.toml  README.md
bynk-emit/runtime/: package-lock.json  package.json  tsconfig.json
bynk-emit/runtime/scripts/: bundle.mjs
bynk-emit/runtime/src/: auth.ts  boundary.ts  connection.ts  http.ts  index.ts  locale.ts  messages.ts
bynk-emit/runtime/test/: auth.test.ts  boundary.test.ts  http.test.ts  locale.test.ts  messages.test.ts
bynk-emit/src/: emitter.rs  lib.rs  project.rs
bynk-emit/src/emitter/: contracts.rs  emit.rs  icu.rs  lower.rs  runtime.ts  secrets.rs  serialisation.rs  source_map.rs  websocket.rs  workers.rs  workers_entry.rs  wrangler.rs
bynk-emit/src/project/: consistency.rs  diagnostics.rs  discovery.rs  graph.rs  paths.rs  symbols.rs  tests_emit.rs  validate.rs
bynk-lsp/: Cargo.toml
bynk-lsp/src/: capability_fixes.rs  code_actions.rs  completion.rs  document_symbols.rs  documentation_request.rs  extract.rs  hover.rs  index_queries.rs  inlay_hints.rs  lib.rs  locals_nav.rs  main.rs  position.rs  project.rs  sequence_request.rs  signature_help.rs  structure.rs  symbols.rs
bynk-lsp/tests/: code_actions.rs  declaration_spans.rs  document_link_fixture.rs  documentation_request.rs  editor_coverage.rs  hover_references.rs  interpolation_lsp.rs  legend_drift.rs  project_model.rs  rename_validation.rs  renderer_kind_coverage.rs  scaffolds_compile.rs  sequence_request.rs
bynk-lsp/tests/support/: mod.rs
bynk/src/: check.rs  cli.rs  compiler.rs  deploy.rs  dev.rs  diagnostics.rs  doctor.rs  explain.rs  fmt.rs  lib.rs  main.rs  new.rs  shell.rs  test.rs
bynk/src/templates/: bynk.toml  starter.bynk
bynk/tests/: dev.rs  dev_inspect.rs  driver_commands.rs  new.rs
bynk/tests/golden/: deploy-plan.txt  deploy-stopped.txt  dev-select-errors.txt  dev-serving-report.txt  new-scaffold.txt
bynk/tests/support/: wrangler_attach.mjs
fuzz/: Cargo.toml  seed-corpus.sh
fuzz/fuzz_targets/: compile.rs  parse.rs
karnc/: Cargo.toml  README.md
karnc/runtime/: runtime.ts
karnc/src/: actors.rs  ast.rs  checker.rs  cli.rs  diagnostics.rs  emitter.rs  error.rs  firstparty.rs  fmt.rs  kernel_methods.rs  lexer.rs  lib.rs  main.rs  parser.rs  project.rs  resolver.rs  span.rs
karnc/src/checker/: calls.rs  expressions.rs  kernels.rs  refinements.rs
karnc/src/emitter/: emit.rs  lower.rs  serialisation.rs  workers.rs  workers_entry.rs
karnc/src/firstparty/: karn.list.karn  karn.map.karn
karnc/src/firstparty/bindings/: runtime.ts
karnc/src/parser/: declarations.rs  expressions.rs
karnc/src/project/: consistency.rs  diagnostics.rs  paths.rs  symbols.rs  tests_emit.rs  validate.rs
karnc/tests/: cli_rooting.rs  cross_context_caller.rs  diagnostics_registry.rs  e2e.rs  expr_types_capture.rs  float_codec_behaviour.rs  grammar_coverage.rs  grammar_reference.rs  json_codec_behaviour.rs  kernel_registry.rs  kv_behaviour.rs  runtime_helpers.rs  signature_auth.rs  suggestions.rs  tsc_verify.rs
karnc/tests/fixtures/negative/23_unknown_constructor/: expected_error.txt
karnc/tests/fixtures/negative/38_method_arg_count/: input.karn
karnc/tests/fixtures/positive/01_minimal/: expected.ts
karnc/tests/fixtures/positive/02_refined_int_nonnegative/: expected.ts
karnc/tests/fixtures/positive/03_refined_int_positive/: expected.ts
karnc/tests/fixtures/positive/04_refined_int_inrange/: expected.ts
karnc/tests/fixtures/positive/05_refined_string_matches/: expected.ts
karnc/tests/fixtures/positive/06_refined_string_minlength/: expected.ts
karnc/tests/fixtures/positive/07_refined_string_maxlength/: expected.ts
karnc/tests/fixtures/positive/08_refined_string_length/: expected.ts
karnc/tests/fixtures/positive/09_refined_string_nonempty/: expected.ts
karnc/tests/fixtures/positive/10_multiple_refinements/: expected.ts
karnc/tests/fixtures/positive/11_function_one_param/: expected.ts
karnc/tests/fixtures/positive/12_function_multi_params/: expected.ts
karnc/tests/fixtures/positive/13_function_arithmetic/: expected.ts
karnc/tests/fixtures/positive/14_function_comparison/: expected.ts
karnc/tests/fixtures/positive/15_function_boolean/: expected.ts
karnc/tests/fixtures/positive/16_function_call/: expected.ts
karnc/tests/fixtures/positive/17_fitness_units/: expected.ts
karnc/tests/fixtures/positive/18_let_simple/: expected.ts
karnc/tests/fixtures/positive/19_let_inferred/: expected.ts
karnc/tests/fixtures/positive/20_let_chained/: expected.ts
karnc/tests/fixtures/positive/21_if_simple/: expected.ts
karnc/tests/fixtures/positive/22_if_else_if/: expected.ts
karnc/tests/fixtures/positive/23_constructor_call/: expected.ts
karnc/tests/fixtures/positive/24_question_propagation/: expected.ts
karnc/tests/fixtures/positive/25_chained_questions/: expected.ts
karnc/tests/fixtures/positive/26_construct_in_if/: expected.ts
karnc/tests/fixtures/positive/27_let_with_question/: expected.ts
karnc/tests/fixtures/positive/28_explicit_ok/: expected.ts
karnc/tests/fixtures/positive/29_explicit_err/: expected.ts
karnc/tests/fixtures/positive/80_effect_type/: expected.ts
tree-sitter-bynk/: Cargo.toml  grammar.js  package-lock.json  package.json
tree-sitter-bynk/bindings/rust/: build.rs  lib.rs
tree-sitter-bynk/queries/: highlights.scm
tree-sitter-bynk/src/: grammar.json  node-types.json  parser.c
tree-sitter-bynk/test/corpus/: fragments.txt  message-bundles.txt  or-patterns.txt  refined-patterns.txt  v0.1.txt  v0.103.txt  v0.110.txt  v0.117.txt  v0.118.txt  v0.119.txt  v0.130.txt  v0.131.txt  v0.141.txt  v0.142.txt  v0.145.txt  v0.146.txt  v0.154.txt  v0.157.txt  v0.182.txt  v0.2.txt  v0.3.txt  v0.45.txt  v0.81.txt  v0.85.txt  v0.9.4.txt  v0.9.txt
tree-sitter-bynk/tests/: conformance.rs
xtask/: Cargo.toml
xtask/src/: lib.rs  main.rs  stamp.rs
xtask/tests/: pending_files.rs  stamp_apply.rs
(+2302 files in other folders)
