# The cargo-fuzz crate (#516). Its own workspace — cargo-fuzz crates build
# with nightly + libFuzzer instrumentation and must not join the stable
# workspace (the pinned toolchain, fmt/clippy sweeps, and --locked builds).
#
# Run (requires nightly + cargo-fuzz):
#
#     ./fuzz/seed-corpus.sh
#     cargo +nightly fuzz run parse   -- -max_total_time=60
#     cargo +nightly fuzz run compile -- -max_total_time=60
[package]
name = "bynk-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bynk-syntax = { path = "../bynk-syntax" }
bynkc = { path = "../bynkc" }

[[bin]]
name = "parse"
path = "fuzz_targets/parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "compile"
path = "fuzz_targets/compile.rs"
test = false
doc = false
bench = false

[workspace]
