[package]
name = "karnc"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "karnc"
path = "src/main.rs"

[dependencies]
ariadne.workspace = true
logos.workspace = true
clap.workspace = true
regex.workspace = true

[dev-dependencies]
insta.workspace = true
regex.workspace = true
# `preserve_order` keeps the grammar rules in source order for the generated
# grammar reference (tests/grammar_reference.rs).
serde_json = { workspace = true, features = ["preserve_order"] }
