[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Repo automation for Bynk — the increment-allocation tooling. Slice 0 validates the pending-increment files under design/pending/; the merge-time stamp (version + ADR-number assignment) lands in later slices. Not a product crate: unpublished, kept off the release workflows' crate list."

[lib]
path = "src/lib.rs"

[[bin]]
name = "xtask"
path = "src/main.rs"
